--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google/genai": "^1.17.0",
     "@tailwindcss/vite": "^4.1.13",
+    "dotenv": "^17.2.2",
     "mime": "^4.0.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
