--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-# Logs
+# Ignore .env file
+.env
+
+# Ignore logs
 logs
 *.log
 npm-debug.log*
@@ -6,13 +9,14 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+.gitignore
+# Ignore build directories
 node_modules
 dist
 dist-ssr
 *.local
 
-# Editor directories and files
+# Ignore editor specific files
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -22,5 +26,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.env
-node_modules/
