--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google/genai": "^1.17.0",
     "@tailwindcss/vite": "^4.1.13",
     "dotenv": "^17.2.2",
+    "marked": "^16.3.0",
     "mime": "^4.0.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
