--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
+    "@google/genai": "^1.33.0",
     "@tailwindcss/vite": "^4.1.13",
     "dotenv": "^17.2.2",
     "marked": "^16.3.0",
